Fix overflow issue and clear input fields when adding new animals

--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -16,6 +16,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 1.4em;
   margin-bottom: 0;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -158,7 +159,8 @@ input {
   .monkey {
     position: absolute;
     height: 200px;
-    left: 80vw;
+    left: 77vw;
+    // overflow-x: scroll;
     bottom: -100%;
     .monkey-img {
       width: 200px;
@@ -268,13 +270,14 @@ edit-animal {
   background-color: lighten(#F37714, 25%);
   border: 5px solid lighten(green, 70%);
   padding: 0 20px;
-  height: 515px;
+  height: 540px;
   font-size: 1.1em;
-  overflow-y: scroll;
   border-radius: 12px;
   margin-bottom: 10px;
+  transition: all 0.3s ease-in-out;
   &:hover {
-    animation: seesaw 4s 3 alternate ease-in-out;
+    animation: seesaw 1s 1 alternate ease-in-out;
+    background-color: lighten(#F37714, 20%);
   }
   h4 {
     text-align: center;
